# txtweb

./: Cargo.toml  README.md
docs/: README.md  structure.md  txt-grammar.md
src/: components.rs  getter.rs  lib.rs  main.rs  parser.rs  translator.rs  util.rs
