[package]
name = "txtweb"
version = "0.1.3"
edition = "2021"
authors = ["Seol SO <hi@iamseol.com>"]
description = "txtweb is the text file-based webpage generator."
license = "MIT"
repository = "https://github.com/iamseol/txtweb"
documentation = "https://github.com/iamseol/txtweb"
homepage = "https://github.com/iamseol/txtweb"
keywords = ["cli", "txt", "web", "generator"]
categories = ["web-programming", "command-line-utilities"]
readme = "README.md"
